objects/Collateral__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>Additional Notes</description>
        <inlineHelpText>Additional Notes</inlineHelpText>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Receive_Date__c</fullName>
        <description>Additional Receive Date</description>
        <inlineHelpText>Additional Receive Date</inlineHelpText>
        <label>Additional Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Submission_Complete__c</fullName>
        <description>Additional Submission Complete</description>
        <inlineHelpText>Additional Submission Complete</inlineHelpText>
        <label>Additional Submission Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>Application Receive Date</description>
        <inlineHelpText>Application Receive Date</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <description>Application Notes</description>
        <inlineHelpText>Application Notes</inlineHelpText>
        <label>Application Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Complete__c</fullName>
        <description>Application Submission Complete</description>
        <inlineHelpText>Application Submission Complete</inlineHelpText>
        <label>Application Submission Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <description>Opportunity BDM</description>
        <formula>Opportunity__r.Owner.FirstName &amp; " " &amp; Opportunity__r.Owner.LastName</formula>
        <inlineHelpText>Opportunity BDM</inlineHelpText>
        <label>BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Notes__c</fullName>
        <description>Census Notes</description>
        <inlineHelpText>Census Notes</inlineHelpText>
        <label>Census Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Census_Receive_Date__c</fullName>
        <description>Census Receive Date</description>
        <inlineHelpText>Census Receive Date</inlineHelpText>
        <label>Census Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Census_Submission_Complete__c</fullName>
        <description>Census Submission Complete</description>
        <inlineHelpText>Census Submission Complete</inlineHelpText>
        <label>Census/PHQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>HC Invoice</fullName>
                </value>
                <value>
                    <fullName>NCCI_Report</fullName>
                    <label>NCCI Report</label>
                </value>
                <value>
                    <fullName>SUTA_Rate</fullName>
                    <label>SUTA Rate</label>
                </value>
                <value>
                    <fullName>TDI_Rate_Sheet</fullName>
                    <label>TDI Rate Sheet</label>
                </value>
                <value>
                    <fullName>WC Declaration Page</fullName>
                </value>
                <value>
                    <fullName>WC Loss Run</fullName>
                </value>
                <value>
                    <fullName>Additional Docs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_App_to_Present_Age__c</fullName>
        <description>Days between Application Date and present date. To be used for list view, not for reports.</description>
        <formula>TODAY() - Application_Date__c</formula>
        <inlineHelpText>Days between Application Date and present date.</inlineHelpText>
        <label>Days App to Present (Age)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_App_to_Proposal__c</fullName>
        <formula>Opportunity__r.Clientspace_Proposal_Date__c - Application_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between App to Proposal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Admin__c</fullName>
        <description>"Estimated Annual Admin" field from the opportunity object.</description>
        <formula>Opportunity__r.Amount</formula>
        <inlineHelpText>"Estimated Annual Admin" field from the opportunity object.</inlineHelpText>
        <label>Estimated Annual Admin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_of_EEs__c</fullName>
        <description>"Estimated # of EEs" field from the opportunity object.</description>
        <formula>Opportunity__r.Estimated_Employee_Count__c</formula>
        <inlineHelpText>"Estimated # of EEs" field from the opportunity object.</inlineHelpText>
        <label>Estimated # of EEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_Invoice_Notes__c</fullName>
        <description>HC Invoice Notes</description>
        <inlineHelpText>HC Invoice Notes</inlineHelpText>
        <label>HC Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HC_Invoice_Receive_Date__c</fullName>
        <description>HC Invoice Receive Date</description>
        <inlineHelpText>HC Invoice Receive Date</inlineHelpText>
        <label>HC Invoice Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HC_Invoice_Submission_Complete__c</fullName>
        <description>HC Invoice Submission Complete</description>
        <inlineHelpText>HC Invoice Submission Complete</inlineHelpText>
        <label>HC Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <color>#FF0000</color>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <color>#33CC00</color>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <color>#FFFF66</color>
                    <label>P</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <color>#33CC00</color>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Run_Notes__c</fullName>
        <description>Loss Run Notes</description>
        <inlineHelpText>Loss Run Notes</inlineHelpText>
        <label>Loss Run Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Run_Receive_Date__c</fullName>
        <description>Loss Run Receive Date</description>
        <inlineHelpText>Loss Run Receive Date</inlineHelpText>
        <label>Loss Run Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Run_Submission_Complete__c</fullName>
        <description>Loss Run Submission Complete</description>
        <inlineHelpText>Loss Run Submission Complete</inlineHelpText>
        <label>Loss Run Submission Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCI_Report_Notes__c</fullName>
        <description>NCCI Report Notes</description>
        <inlineHelpText>NCCI Report Notes</inlineHelpText>
        <label>NCCI Report Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCCI_Report_Receive_Date__c</fullName>
        <description>NCCI Report Receive Date</description>
        <inlineHelpText>NCCI Report Receive Date</inlineHelpText>
        <label>NCCI Report Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCCI_Report_Submission_Complete__c</fullName>
        <description>NCCI Report Submission Complete</description>
        <inlineHelpText>NCCI Report Submission Complete</inlineHelpText>
        <label>NCCI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Opportunity Status</description>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <inlineHelpText>Opportunity Status</inlineHelpText>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master-detail relationship</description>
        <inlineHelpText>Master-detail relationship</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receive_Date__c</fullName>
        <description>Collateral received date</description>
        <inlineHelpText>Collateral received date</inlineHelpText>
        <label>Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUTA_Notes__c</fullName>
        <description>SUTA Notes</description>
        <inlineHelpText>SUTA Notes</inlineHelpText>
        <label>SUTA Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SUTA_Receive_Date__c</fullName>
        <description>SUTA Receive Date</description>
        <inlineHelpText>SUTA Receive Date</inlineHelpText>
        <label>SUTA Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUTA_Submission_Complete__c</fullName>
        <description>SUTA Submission Complete</description>
        <inlineHelpText>SUTA Submission Complete</inlineHelpText>
        <label>SUTA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Ops_Notes__c</fullName>
        <label>Sales Ops Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Ops__c</fullName>
        <description>Opportunity Sales Ops Owner</description>
        <formula>Opportunity__r.Sales_Ops_Owner__r.FirstName &amp; " " &amp; Opportunity__r.Sales_Ops_Owner__r.LastName</formula>
        <inlineHelpText>Opportunity Sales Ops Owner</inlineHelpText>
        <label>Sales Ops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Complete__c</fullName>
        <label>Submission Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDI_Notes__c</fullName>
        <description>TDI Notes</description>
        <inlineHelpText>TDI Notes</inlineHelpText>
        <label>TDI Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TDI_Receive_Date__c</fullName>
        <description>TDI Receive Date</description>
        <inlineHelpText>TDI Receive Date</inlineHelpText>
        <label>TDI Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDI_Submission_Complete__c</fullName>
        <description>TDI Submission Complete</description>
        <inlineHelpText>TDI Submission Complete</inlineHelpText>
        <label>TDI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_Dec_Notes__c</fullName>
        <description>WC Dec Notes</description>
        <inlineHelpText>WC Dec Notes</inlineHelpText>
        <label>WC Dec Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WC_Dec_Receive_Date__c</fullName>
        <description>WC Dec Receive Date</description>
        <inlineHelpText>WC Dec Receive Date</inlineHelpText>
        <label>WC Dec Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WC_Dec_Submission_Complete__c</fullName>
        <description>WC Dec Submission Complete</description>
        <inlineHelpText>WC Dec Submission Complete</inlineHelpText>
        <label>WC Dec</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Opportunity Collateral</description>
    <label>Collateral</label>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops__c</columns>
        <columns>BDM__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application,Pricing</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BDM_Amanda_Lindley</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Amanda Lindley</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Amanda Lindley</label>
    </listViews>
    <listViews>
        <fullName>BDM_Dale_Yasunaga</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Dale Yasunaga</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Dale Yasunaga</label>
    </listViews>
    <listViews>
        <fullName>BDM_Debbie_Dudoit</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Debbie Dudoit</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Debbie Dudoit</label>
    </listViews>
    <listViews>
        <fullName>BDM_Guy_Tanioka</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Guy Tanioka</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Guy Tanioka</label>
    </listViews>
    <listViews>
        <fullName>BDM_Holly_DeGeal</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Holly DeGeal</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Holly DeGeal</label>
    </listViews>
    <listViews>
        <fullName>BDM_Jared_Furusho</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Jared Furusho</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Jared Furusho</label>
    </listViews>
    <listViews>
        <fullName>BDM_Jason_Daley</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Jason Daley</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Jason Daley</label>
    </listViews>
    <listViews>
        <fullName>BDM_Jill_Eckart</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Jill Eckart</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Jill Eckart</label>
    </listViews>
    <listViews>
        <fullName>BDM_Kathy_Bell</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Kathy Bell</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Kathy Bell</label>
    </listViews>
    <listViews>
        <fullName>BDM_Stanton_Saiki</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Stanton Saiki</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Stanton Saiki</label>
    </listViews>
    <listViews>
        <fullName>BDM_Stephanie_Wu</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Sales_Ops_Notes__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Days_App_to_Present_Age__c</columns>
        <columns>Estimated_of_EEs__c</columns>
        <columns>Estimated_Annual_Admin__c</columns>
        <columns>Census_Submission_Complete__c</columns>
        <columns>HC_Invoice_Submission_Complete__c</columns>
        <columns>SUTA_Submission_Complete__c</columns>
        <columns>TDI_Submission_Complete__c</columns>
        <columns>WC_Dec_Submission_Complete__c</columns>
        <columns>NCCI_Report_Submission_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Info Gathering,Application Review,Submit to Pricing,Pricing Complete</value>
        </filters>
        <filters>
            <field>BDM__c</field>
            <operation>equals</operation>
            <value>Stephanie Wu</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>BDM - Stephanie Wu</label>
    </listViews>
</CustomObject>